      overflow reliably.

      \item \code{tar(., files=*)} now produces correctly the warning
      about invalid uid or gid of files, fixing \PR{18344}, reported by
      Martin Morgan.

      \item \code{tk_choose.files()} with \code{multi = FALSE}
      misbehaved on paths containing spaces (\PR{18334}) (regression
      introduced in R 4.0.0).

      \item Environment variable \env{_R_CHECK_XREFS_REPOSITORIES_} is
      only used for checking \file{.Rd} cross-references in \command{R CMD
      check} (as documented) and not for other uses looking for a CRAN
      mirror.
    }
  }

  \subsection{BUG FIXES on Windows}{
    \itemize{
      \item Writing to a clipboard connection works again, fixing a
      regression in \R 4.2.0 (\PR{18332}).  Re-using a closed clipboard
      connection longer issues a spurious warning about an ignored
      encoding argument.

      \item C function \code{getlocale} no longer attempts to query an
      unsupported category from the OS, even when requested at R level,
      which may cause crashes when \R 4.2.0 (which uses UCRT) is
      embedded (reported by Kevin Ushey).

      \item Accent keys now work in GraphApp Unicode windows, which are
      used by \command{Rgui} whenever running in a multibyte locale (so
      also in UTF-8, hence fixing a regression in \R 4.2.0 for users of
      systems where \R 4.1 used a single-byte locale).

      \item Completion in \command{Rgui} now works also with
      non-ASCII characters.

      \item \command{Rgui} no longer truncates usage information with
      \option{--help}.

     \item Text injection from external applications via
      \code{SendInput} now works in GraphApp Unicode windows, fixing a
      regression in \R 4.2.0 for \command{Rgui} users of systems where
      \R 4.1 used a single-byte locale but \R 4.2.0 uses UTF-8.

      \item Performance of \code{txtProgressBar()} in \command{Rgui} when
      running in a multi-byte locale has been improved (fixing a